--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "email" : "your_username",
-    "password" : "your_paswword",
+    "email" : "your_email",
+    "password" : "your_password",
     "keywords" : "your_keywords",
     "location" : "your_location",
-    "driver_path" : "your_path_to_chromedriver"
+    "driver_path" : "your_path_to_webdriver"
 }
