driver path is now optional, and all deprecated selenium functions have been changed to work with selenium 4

--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
     "password" : "your_password",
     "keywords" : "your_keywords",
     "location" : "your_location",
-    "driver_path" : "your_path_to_webdriver"
+    "optional_driver_path" : ""  
 }
